examples/resolver/checker/fail/index_requires_integer.axo
const bad = 1[0]
print(bad)
